[project]
name = "pdf2png"
version = "0.1.0"
description = "MCP server to convert a PDF to a PNG file."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.2.0",
    "pdf2image>=1.16.3",
    "tqdm>=4.65.0"
]

[[project.authors]]
name = "Kirk Truax"
email = "kirktruax93@proton.me"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
pdf2png = "pdf2png:main"